<resources>
    <string name="app_name">나도선배</string>
    <string name="app_name_dev">나도선배개발용</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="third_fragment_label">Third Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigation_home">홈</string>
    <string name="navigation_room">과방</string>
    <string name="navigation_community">커뮤니티</string>
    <string name="navigation_notice">알림</string>
    <string name="navigation_mypage">마이페이지</string>
    <string name="findpw_title">비밀번호 찾기</string>
    <string name="findpw_contents">본인 인증을 위해 \n가입 당시 입력한 정보를 입력해주세요</string>
    <string name="findpw_email">학교 이메일 계정</string>
    <string name="findpw_warn">해당 메일로 가입된 사용자가 없습니다.</string>
    <string name="findpw_check">확인</string>
    <string name="pw_change">비밀번호 재설정</string>
    <string name="pw_text_change">비밀번호를 재설정할 수 있는 링크가 전송되었습니다.</string>
    <string name="signup_agreement_title">회원가입</string>
    <string name="signup_agreement_process1">약관동의</string>
    <string name="signup_agreement_process2">전공정보</string>
    <string name="signup_agreement_process3">기본정보</string>
    <string name="signup_agreement_agree_all">전체 동의</string>
    <string name="signup_agreement_option1">개인정보 수집 동의 (필수)</string>
    <string name="signup_agreement_option2">서비스 이용 약관 동의 (필수)</string>
    <string name="signup_agreement_next">다음</string>
    <string name="sign_in_subtitle">학과 후기 열람부터 전공생과의 질의응답까지!</string>
    <string name="sign_in_pw">비밀번호</string>
    <string name="sign_in_signup">회원가입</string>
    <string name="sign_in_question">문의하기</string>
    <string name="sign_in_warn">아이디 또는 비밀번호가 잘못되었어요.</string>
    <string name="sign_in_login">로그인</string>
    <string name="sign_in_inform">나도선배 계정이 없으면 회원가입을 해주세요</string>
    <string name="review_major_page">학과 홈페이지</string>
    <string name="review_subject_table">이수과목 일람표</string>
    <string name="review_filter">필터</string>
    <string name="review_latest_order">최신순</string>
    <string name="review_likes_order">도움순</string>
    <string name="review_reviews">후기</string>
    <string name="review_pros_cons">장단점</string>
    <string name="review_career">향후 진로</string>
    <string name="review_recommend_lecture">추천 수업</string>
    <string name="review_non_recommend_lecture">힘든 수업</string>
    <string name="review_curriculum">뭘 배우나요?</string>
    <string name="review_tip">꿀팁</string>
    <string name="review_example_major_selected">국어국문학과</string>
    <string name="review_example_create_at">21/12/23</string>
    <string name="review_example_likes">1</string>
    <string name="review_example_one_line_review">\"난 자유롭고 싶어 지금 전투력 수치 111퍼\"</string>
    <string name="review_example_nickname">닉네임</string>
    <string name="review_example_first_major">본전명 18-1</string>
    <string name="review_example_second_major">제2전공명 18-1</string>
    <string name="review_example_label_name">라벨명</string>
    <string name="review_example_label_content">난 자유롭고 싶어 지금 전투력 수치 111퍼난 자유롭고 싶어 지금 전투력 수치 111퍼난 자유롭고 싶어 지금 전투력 수치 111퍼난 자유롭고 싶어 지금 전투력 수치 111퍼난 자유롭고난 자유롭고 싶어 지금 전투력 수치 111퍼난 자유롭고 싶어 지금 전투력 수치 111퍼</string>
    <string name="review_example_one_line_max">난 자유롭고 싶어 지금 전투력 수치 111퍼? 난 자유롭고 싶어 지금 전</string>
    <string name="review_major_review">학과후기</string>
    <string name="review_first_major">본</string>
    <string name="review_second_major">제2</string>
    <string name="review_question_on_message">선배에게 1:1 질문을 남겨보세요!</string>
    <string name="review_question_off_message">지금 이 선배에겐 질문할 수 없어요.</string>
    <string name="review_one_line">한줄평</string>
    <string name="review_edit">수정하기</string>
    <string name="review_delete">삭제하기</string>
    <string name="review_report">신고하기</string>
    <string name="review_recommend_question">이 선배에게 더 궁금한 점이 있다면 1:1 질문을 남겨보세요.</string>
    <string name="review_write_title">후기작성</string>
    <string name="review_write_complete">완료</string>
    <string name="review_write_change">변경</string>
    <string name="review_write_major">후기작성학과</string>
    <string name="review_write_select_background">배경선택</string>
    <string name="review_write_required">필수작성</string>
    <string name="review_write_optional">선택작성</string>
    <string name="review_write_min_items">* 최소 1개 항목을 50자 이상 작성</string>
    <string name="review_write_hint_content">내용을 입력해주세요.</string>
    <string name="review_write_hint_one_line">학과를 한줄로 표현한다면?</string>
    <string name="review_write_max_40">최대 40자</string>
    <string name="review_write_min_100">최소 100자</string>
    <string name="review_write_pros_cons">장단점</string>
    <string name="review_write_length">자</string>
    <string name="filter_writer">작성자</string>
    <string name="filter_first_major_student">본전공생</string>
    <string name="filter_second_major_student">제2전공생</string>
    <string name="filter_content">후기 내용</string>
    <string name="filter_apply">적용하기</string>
    <string name="signup_majorInfo_univ">학교명</string>
    <string name="signup_majorInfo_select">선택하기</string>
    <string name="signup_majorInfo_selection">선택</string>
    <string name="signup_first_major">본전공</string>
    <string name="signup_first_major_time">본전공 진입시기</string>
    <string name="signup_second_major">제2전공</string>
    <string name="signup_second_major_time">제2전공 진입시기</string>
    <string name="signup_change">변경</string>
    <string name="classroom_title">국어국문학과</string>
    <string name="classroom_question_title">질문</string>
    <string name="classroom_info_title">정보</string>
    <string name="classroom_question_all">선배 전체에게 질문</string>
    <string name="classroom_question_all_ask">학과 구성원 모두가 답할 수 있어요!</string>
    <string name="classroom_question_write">질문 하기</string>
    <string name="classroom_question_all_title">공개게시판 미리보기페이지 질문제목 넘을 경우 넘을 경우 넘을 경우</string>
    <string name="classroom_question_all_content">질문내용 두 줄일 경우 질문내용 두 줄일 경우 질문내용 두 줄일 경우 질문내용 두 줄일 경우</string>
    <string name="classroom_question_nickname">닉네임</string>
    <string name="classroom_question_time">오후 5:42</string>
    <string name="classroom_question_count">n</string>
    <string name="classroom_question_zero_count">등록된 질문글이 없습니다.</string>
    <string name="classroom_question_all_go">질문 전체보기</string>
    <string name="classroom_question_senior_personal_title">선배에게 개인 질문</string>
    <string name="classroom_question_senior_all_see">구성원 전체보기</string>
    <string name="classroom_question_one_to_one">선배에게 1:1 질문</string>
    <string name="classroom_question_senior_search">선배 찾기</string>
    <string name="classroom_question_delete_comment">(삭제된 답변입니다)</string>
    <string name="classroom_block_title">해당 유저를 차단하시겠어요?\n차단시 본인이 쓴 글 및 마이페이지에\n해당유저가 접근할 수 없습니다.</string>
    <string name="classroom_block_agree">차단하기</string>
    <string name="classroom_question_write_hint">질문을 남겨보세요.\n선배들이 답변해 줄 거예요!</string>
    <string name="classroom_content_delete">(삭제된 답글입니다.)</string>
    <string name="classroom_post_delete">삭제된 게시글입니다.</string>
    <string name="ask_everyone_title">전체에게 질문</string>
    <string name="ask_everyone_new">최신순</string>
    <string name="classroom_senior_item_no">등록된 1:1질문이 없습니다.</string>
    <string name="signup_finish_title">메일함을 확인해보세요!</string>
    <string name="signup_finish_subtitle">학교 이메일 인증 링크가 전송되었어요.\n인증을 실시하면 회원가입이 완료됩니다.</string>
    <string name="signup_finish_warning">메일이 도착하지 않았다면 스팸 메일함을 확인해보세요.</string>
    <string name="signup_mail_resend">재전송</string>
    <string name="signup_finish_go">로그인 페이지로 돌아가기</string>
    <string name="signup_basicinfo_email_korea">@korea.ac.kr</string>
    <string name="signup_basicinfo_before_input">입력 전</string>
    <string name="signup_basicinfo_check_duplication">중복 확인</string>
    <string name="signup_basicinfo_check_email_duplication">이메일 확인</string>
    <string name="signup_basicinfo_nickname">: 영문, 한글, 숫자를 합하여 2-8자</string>
    <string name="signup_basicinfo_check_duplication_nickname_ok">사용 가능한 닉네임입니다.</string>
    <string name="signup_basicinfo_check_duplication_nickname_no">이미 사용중인 닉네임입니다.</string>
    <string name="signup_basicinfo_email">학교 이메일 : 로그인 시 아이디로 사용</string>
    <string name="signup_basicinfo_check_duplication_email_ok">사용 가능한 이메일입니다.</string>
    <string name="signup_basicinfo_check_duplication_email_no">이미 가입된 이메일입니다.</string>
    <string name="signup_basicinfo_password">: 영문, 숫자를 합하여 6-20자</string>
    <string name="signup_basicinfo_password_check">비밀번호 확인</string>
    <string name="signup_basicinfo_password_same">비밀번호가 일치합니다.</string>
    <string name="signup_basicinfo_password_not_same">비밀번호가 일치하지 않습니다.</string>
    <string name="signup_basicinfo_complete">완료</string>
    <string name="signup_alert">페이지를 나가면\n회원가입이 취소돼요.</string>
    <string name="signup_alert_out">나갈래요</string>
    <string name="signup_alert_in">계속 작성</string>
    <string name="question_can">질문 가능해요</string>
    <string name="start_major">본</string>
    <string name="second_major">제2</string>
    <string name="major_start">18-1 진입</string>
    <string name="senior_rest">쉬고 있어요</string>
    <string name="senior_only_question">후기 작성한 선배만 보기</string>
    <string-array name="spinner_univ">
        <item>고려대학교</item>
        <item>타대학은 현재 준비중입니다</item>
    </string-array>
    <string name="mypage_no_question">지금은 질문을 안 받기로 했어요.</string>
    <string name="mypage_my_nickname">내 닉네임</string>
    <string name="mypage_modify_profile">프로필 수정</string>
    <string name="mypage_first_major">본</string>
    <string name="mypage_first_major_name">본전공명</string>
    <string name="mypage_first_major_time">18-1</string>
    <string name="mypage_second_major">제 2</string>
    <string name="mypage_second_major_name">제2전공명</string>
    <string name="mypage_second_major_time">18-2</string>
    <string name="mypage_reply_rate">응답률</string>
    <string name="mypage_reply_rate_num">88%</string>
    <string name="mypage_write_by_me">내가 쓴 글</string>
    <string name="mypage_reply_by_me">내가 쓴 답글</string>
    <string name="mypage_classroom_review">내가 쓴 후기</string>
    <string name="mypage_like_list">좋아요 목록</string>
    <string name="mypage_like_list_num">nn</string>
    <string name="mypage_personal_question">나에게 온 1:1 질문</string>
    <string name="mypage_item_no">등록된 1:1 질문이 없습니다.</string>
    <string name="mypage_modify_img">프로필 사진 변경</string>
    <string name="question_write_all">전체에게 질문 작성</string>
    <string name="question_write_all_save">완료</string>
    <string name="question_write_hint">제목을 입력하세요</string>
    <string name="question_write_content">내용</string>
    <string name="question_write_content_hint">선배에게 1:1 질문을 남겨보세요.\n선배가 답변해 줄 거예요!</string>
    <string name="question_write_one_to_one">1:1 질문 작성</string>
    <string name="question_detail_title">1:1 질문</string>
    <string name="question_detail_comment">답글 쓰기</string>
    <string name="question_detail_writer">원글쓴 닉네임</string>
    <string name="question_detail_major">본전명</string>
    <string name="question_detail_second_major">제2전공명</string>
    <string name="question_detail_major_start">18-1</string>
    <string name="question_detail_second_major_start">18-1</string>
    <string name="question_detail_like_count">19</string>
    <string name="question_detail_time">21/12/13</string>
    <string name="question_detail_update">수정</string>
    <string name="report_reason">신고 사유 선택</string>
    <string name="report_one">음란/욕설/분쟁</string>
    <string name="report_two">유출/사칭/사기</string>
    <string name="report_three">상업성 내용</string>
    <string name="report_four">우리 학교/학과가 아닌 학생</string>
    <string name="report_five">서비스 취지에 맞지 않는 글</string>
    <string name="report_six">기타</string>
</resources>